# ufo

./: .gitignore  CMakeLists.txt
include/: library.h  logger.h
src/: constants.h  library.cpp  logger.cpp  logger.h  utils.cpp  utils.h
tests/: CMakeLists.txt  library_test.cpp  utils_test.cpp
